footnote margin on mobile fix

--- a/styles.css
+++ b/styles.css
@@ -128,4 +128,9 @@ section.images {
       margin-right: auto;
       width: 90%;
     }
+
+    section.brideshead-section.footnote {
+        overflow-wrap: break-word
+
+    }
 } 
